# PyTorch-Playgrounds

./: .gitignore  README.md  datasets_and_loaders.ipynb  introduction.ipynb  main.py  pyproject.toml
CLIP/: README.md  clip-contrastive-learning.ipynb  main.py  main_app.py  main_ft.py
CLIP/src/: clip.py  clip_lora.py  clip_text_encoder.py  clip_vision_encoder.py  data.py  dataset.py  feed_forward.py  load_model.py  mhsa.py  optimizer.py  performance_plot.py  text_encoder_block.py  ui.py
GPT/: README.md  main.py  main_test.py  minigpt-19-6-million-parameters.ipynb  minigpt.ipynb
GPT/src/: data.py  data_preprocess.py  decoder_block.py  feed_forward.py  multihead_attention.py  my_gpt.py  optimization.py  self_attention.py
GPT/tests/: conftest.py  test_data_preprocessor.py  test_dataset.py  test_multihead_attention.py  test_self_attention.py  test_tokenizer.py
PyTorch Basics/: introduction.ipynb  pretrained_models.ipynb
Resnet/: README.md  main_resnet34.py  resnet-34-lmagenet100.ipynb  resnet-50-lmagenet.ipynb
Resnet-50/: main.py
Resnet-50/src/: resnet50.py
Resnet/src/: optimizer.py  residual_block.py  residual_block34.py  resnet34.py  resnet50.py
ViT/: README.md  main.py  vision-transformer-base-16-86m.ipynb
ViT/src/: data.py  feed_forward.py  multi_head_attention.py  optimizer.py  resnet50.py  vision_encoder.py  vision_transformer.py
