[project]
name = "pytorch-playgrounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.12",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]
